<?xml version="1.0"?>
<package format="2">
  <name>robotiq_gripper</name>
  <version>0.0.0</version>
  <description>The robotiq_gripper package</description>

  
  <maintainer email="deivideich@todo.todo">ros</maintainer>


  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>

  <build_depend>robot_state_publisher</build_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <build_depend>xacro</build_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
